# godathan

./: .gitignore  .gitmodules  APITOKEN  APITOKEN.example  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  godathan.kdev4
.kdev4/: godathan.kdev4
include/: godathan.h  voice.h  voiceeventhandler.h
src/: .godathan.cpp.kate-swp  godathan.cpp  main.cpp  voice.cpp  voiceeventhandler.cpp
